Fixing the things and 2 exercise
esqueci de manter o index da aula

--- a/Aula1/index.html
+++ b/Aula1/index.html
@@ -6,6 +6,7 @@
     <title>Quem sou eu?</title>
 </head>
 <body>
+    <center>
     <img src="imgs/Eu.jpg" alt="Foto minha" width=600px">
 
     <h1>Davi Diniz Dalevedo</h1>
@@ -39,6 +40,12 @@
             <h3>Github: DaviDD</h3>
         </li>
     </ul>
+
+<br>
+<br>
+<br>
+
+</center>
 
 
     
