fix little things

--- a/Aula2/Index.html
+++ b/Aula2/Index.html
@@ -9,7 +9,7 @@
 
 <center>
 
-<br><br><br>
+<br><br>    
 
 <form>
     <ul>
@@ -30,7 +30,7 @@
             <input type="radio">
         </li>
         <li>
-            <label for="gender">Gênero Outro</label>
+            <label for="gender">Outro Gênero</label>
             <input type="radio">
         </li>
     </ul>
@@ -46,10 +46,6 @@
     </ol>
         <button type="submit">Enviar</button>
 </form>
-
-<br><br><br>
-   
-
 
 </center>    
     
